--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^7.1.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.9.0",
+    "node-html-parser": "^6.1.13",
     "sass": "^1.75.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
