--- a/package.json
+++ b/package.json
@@ -8,21 +8,26 @@
     "node": ">=18.18.0"
   },
   "scripts": {
-    "start": "export $(cat .env | xargs) && export NODE_ENV=development && webpack serve --open --mode=development",
-    "build": "export $(cat .env | xargs) && export NODE_ENV=production && webpack --mode=production "
+    "start": "export $(cat .env | xargs) && export NODE_ENV=development && webpack serve --open",
+    "build": "export $(cat .env | xargs) && export NODE_ENV=production && webpack",
+    "serve": "http-server dist -p 8080"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
-    "css-loader": "^7.1.1",
+    "css-loader": "^7.1.2",
+    "cssnano": "^7.0.1",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.9.0",
+    "http-server": "^14.1.1",
     "node-html-parser": "^6.1.13",
-    "sass": "^1.75.0",
-    "sass-loader": "^14.2.1",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
+    "puppeteer": "^22.9.0",
+    "puppeteer-prerender-plugin": "^3.0.15",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.2.2",
     "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   }
