--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "node": ">=18.18.0"
   },
   "scripts": {
-    "start": "export $(cat .env | xargs) && export NODE_ENV=development && webpack serve --open",
-    "build": "export $(cat .env | xargs) && export NODE_ENV=production && webpack",
+    "env": "export $(grep -v '^#' .env | xargs)",
+    "start": "export NODE_ENV=development && webpack serve --open",
+    "build": "npm run env && export NODE_ENV=production && webpack",
     "serve": "http-server dist -p 8080"
   },
   "devDependencies": {
