--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cssnano": "^7.0.1",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
+    "json5-loader": "^4.0.1",
     "node-html-parser": "^6.1.13",
     "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
