--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "env": "export $(grep -v '^#' .env | xargs)",
     "start": "export NODE_ENV=development && webpack serve --open",
-    "build": "npm run env && export NODE_ENV=production && webpack",
+    "build": "npm env && export NODE_ENV=production && webpack",
     "serve": "http-server dist -p 8080"
   },
   "devDependencies": {
