--- a/src/pages/home-page/projects-list.json
+++ b/src/pages/home-page/projects-list.json
@@ -1,31 +1,31 @@
 [
   {
     "icon": "play",
-    "project_slug": "setup",
+    "projectSlug": "setup",
     "headline": "Setup, Set, Go!",
     "text": "Skip the struggle. Build strong knowledge about WebGPU fundation quickly!"
   },
   {
     "icon": "triangle",
-    "project_slug": "project-2",
+    "projectSlug": "project-2",
     "headline": "Triangle",
     "text": "The fundamental element of modern rendering - triangle."
   },
   {
     "icon": "play",
-    "project_slug": "project-1",
+    "projectSlug": "project-1",
     "headline": "Setup, Set, Go!",
     "text": "Base for WebGPU renderings."
   },
   {
     "icon": "triangle",
-    "project_slug": "project-2",
+    "projectSlug": "project-2",
     "headline": "Triangle",
     "text": "The fundamental element of modern rendering - triangle."
   },
   {
     "icon": "triangle",
-    "project_slug": "project-2",
+    "projectSlug": "project-2",
     "headline": "Triangle",
     "text": "The fundamental element of modern rendering - triangle."
   }
