--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "export NODE_ENV=development && webpack serve --open",
-    "build": "export $(grep -v '^#' .env | xargs) && export NODE_ENV=production && webpack",
+    "build": "export $(grep -v '^#' .env | xargs) && export NODE_ENV=production && webpack && node ./measureHTMLs.js",
     "serve": "http-server dist -p 8080"
   },
   "devDependencies": {
